added dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
       name="description"
       content="Personal website of Sandip Rout"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="sandip-favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="sandip-favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="sandip-favicon/favicon-16x16.png">
+    <link rel="manifest" href="sandip-favicon/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
